<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topFrameSettings"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backAndApplyButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_arrow_back"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/settingsVariants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseSaveVariant"
        app:layout_constraintTop_toBottomOf="@+id/topFrameSettings"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@+id/settingsVariants"
        app:layout_constraintStart_toStartOf="parent"
        >
        <RadioButton
            android:id="@+id/appSpecificButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:checked="true"
            android:text="@string/app_specific_storage"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/sharedStorageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sharedStorage"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>