<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topFrame"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_arrow_back"
            android:contentDescription="@string/addFileBtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fileManager"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/createFileBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_add_file"
            android:contentDescription="@string/addFileBtn" />

        <ImageButton
            android:id="@+id/settingsBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_settings"
            android:contentDescription="@string/settings" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topFrame">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFilesView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>